crates/etas_tests/fixtures/compiler/projects/positive/std_substrate_source/src/app/main.es
module app.main;

import std.collections.Array;
import app.substrate.service.{summarize_substrate};

flow main(args: Array<string>) -> i32
{
    let report = summarize_substrate();
    if report.count > 0 {
        return 0;
    }
    return 1;
}
