crates/etas_tests/fixtures/compiler/projects/negative/wildcard_ambiguity/src/app/main.es
module app.main;

import app.left.*;
import app.right.*;

flow main(args: Array<string>) -> i32 {
    helper();
    return 0;
}
